syntax = "proto3";

option go_package = "v1";
option java_package = "io.stackrox.proto.api.v1";

import weak "google/api/annotations.proto";
import "api/v1/image_service.proto";

package v1;

service EnrichmentService {

    rpc EnrichImage(Image) returns (Image) {
        option (google.api.http) = {
            post: "/v1/enrichimage"
            body: "*"
        };
    }

}
